--- a/src/components/navbar/navbar.styles.css
+++ b/src/components/navbar/navbar.styles.css
@@ -1,11 +1,17 @@
+.nav {
+  width: 100vw;
+}
+
 .header-container {
   width: 100vw;
   height: fit-content;
-  padding: 20px;
+  padding: 10px;
+  display: grid;
+  place-items: center;
 }
 .logo {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-evenly;
   align-items: center;
   background-color: var(--error);
   border: none;
@@ -43,36 +49,31 @@
   z-index: 2;
   left: 0;
   top: 80px;
+  right: 0;
   text-transform: uppercase;
 }
 .nav-dropdown ul {
-  padding: 20px;
+  padding: 10px;
   width: inherit;
   height: 80%;
   display: flex;
   justify-content: space-evenly;
-  align-items: end;
+  align-items: start;
 }
-.footer-wrapper {
-  margin-top: 20px;
-  padding-top: 20px;
-}
+
 .footer-container {
-  width: 100vw;
+  max-width: 100vw;
   height: fit-content;
   background: var(--dark-primary);
   color: var(--white);
-  padding: 30px;
+  padding: 10px;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
 }
 
-.outlet-container {
-  height: fit-content;
-}
 .footer-link-container {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-evenly;
 }
 .footer-list {
   display: flex;
@@ -84,5 +85,9 @@
   }
   .toggle-icon {
     display: block;
+  }
+  .footer-container {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
   }
 }
