--- a/src/components/section/section.styles.css
+++ b/src/components/section/section.styles.css
@@ -1,4 +1,5 @@
 .section-container {
+  width: 100vw;
   padding: 20px;
   background-color: var(--white);
 }
@@ -6,7 +7,7 @@
   display: grid;
   place-content: center;
 
-  margin: 20px;
+  margin: 10px;
   width: 100%;
   height: 100%;
 }
